--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate",
+    "migrate:prod": "prisma migrate deploy"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.9",
+    "@apollo/client-integration-nextjs": "^0.14.1",
     "@prisma/client": "^6.19.0",
     "better-auth": "^1.3.34",
     "dotenv": "^17.2.3",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "nodemailer": "^7.0.10",
